設定を追加

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -245,3 +245,9 @@ div.radio-group div:last-child label {
 div.radio-group label.checked {
   background: #32a0a0;
 }
+
+div.setting {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+}
