--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -255,3 +255,15 @@ div.setting {
   display: inline-block;
   width: 20%;
 }
+
+//Top雪を降らすbyHashikawa
+.snow {
+  position: absolute;
+  background: #FFF;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.8);
+  -moz-box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.8);
+  -webkit-box-shadow: 0px 0px 5px 1px rgba(255, 255, 255, 0.8);
+}
