--- a/app/views/users/setting.html.slim
+++ b/app/views/users/setting.html.slim
@@ -1,6 +1,34 @@
 .wrapper
   h1 初期設定
-  form
+  =form_for @user, url: registration_path do |f|
+    label お住まい
+    =f.text_field :address, placeholder:"例：東京都港区芝公園４−２−８", size:"30"
+
+    label メールアドレス
+    =f.email_field :mail, placeholder:"例：hogehoge@huga.com", size:"30"
+
+    label 今の屋根の積もり具合は何cmぐらい？
+    =f.text_field :total_depth, placeholder:"例：30"
+
+    label ”オロス”タイミング
+    .level-img
+      img src="/assets/level.png"
+
+    .radio-group.clearfix
+        f.radio_button :timing_id
+        label for="30cm" 30cm
+
+        f.radio_button :timing_id
+        label for="50cm" 50cm
+
+        f.radio_button :timing_id
+        label for="70cm" 70cm
+
+        f.radio_button :timing_id
+        label for="90cm" 90cm
+
+    =f.submit "つぎへ", class:"btn-og"
+
     label お住まい
     input#set_addresss.set_address placeholder="住所" size="30" type="text"
 
@@ -26,7 +54,7 @@
       div
         input#90cm.radio type="radio" name="radio" value="90cm"
         label for="90cm" 90cm
-    
+
     p
       button.btn-og type="submit" つぎへ
 
