--- a/app/views/users/setting.html.slim
+++ b/app/views/users/setting.html.slim
@@ -26,7 +26,7 @@
       f.radio_button :timing_id
       label for="70cm" 70cm
       f.radio_button :timing_id
-      label for="90cm" 90cm
+      label.last for="90cm" 90cm
 
     =f.submit "つぎへ", class:"btn-og"
 
